--- a/backend/productos/productos/src/main/resources/application.properties
+++ b/backend/productos/productos/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=productos
+ 
+# Configuración de la base de datos MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/licoresdb?useSSL=false&serverTimezone=UTC
+spring.datasource.username=tu_usuario
+spring.datasource.password=tu_contraseña
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA y Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
