back funcional con api de productos

--- a/backend/productos/productos/src/main/resources/application.properties
+++ b/backend/productos/productos/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 spring.application.name=productos
+server.port=8081
  
 # Configuración de la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/licoresdb?useSSL=false&serverTimezone=UTC
-spring.datasource.username=tu_usuario
-spring.datasource.password=tu_contraseña
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/licoresdb
+spring.datasource.username=postgres
+spring.datasource.password=Lu246988
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA y Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
