Añadir categoría a la entidad Producto y actualizar la configuración de la base de datos. Mejorar estilos de tarjetas en CSS y ajustar la visualización de productos en JavaScript.

--- a/backend/productos/productos/src/main/resources/application.properties
+++ b/backend/productos/productos/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=productos
 server.port=8081
  
 # Configuración de la base de datos MySQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/licoresdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/licores
 spring.datasource.username=postgres
 spring.datasource.password=Lu246988
 spring.datasource.driver-class-name=org.postgresql.Driver
